fix: CORS — lire APP_FRONTEND_URL depuis les variables d'environnement